<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>goep.hm</groupId>
	<artifactId>spc</artifactId>
	<version>1.0</version>
	<packaging>war</packaging>

	<name>spc</name>

	<properties>
		<springframework.version>4.3.2.RELEASE</springframework.version>
		<hibernate.version>4.3.6.Final</hibernate.version>
		<mysql.connector.version>5.1.31</mysql.connector.version>
		<joda-time.version>2.3</joda-time.version>
	</properties>

	<dependencies>
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${springframework.version}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${springframework.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
		<dependency>
			<groupId>jstl</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- Hibernate -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- JPA Vendor -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<!-- MySQL -->
		<!-- dependency> <groupId>mysql</groupId> <artifactId>mysql-connector-java</artifactId> 
			<version>${mysql.connector.version}</version> </dependency -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.2.8</version>
		</dependency>

	</dependencies>

	<build>
		<finalName>spc</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<systemProperties>
						<JAVA_OPTS>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</JAVA_OPTS>
					</systemProperties>
					<port>8888</port>
					<path>/${project.build.finalName}</path>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<version>3.1</version>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<warName>${project.build.finalName}</warName>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<repositories>
		<!-- Spring Milestone Repository -->
		<repository>
			<id>spring-milestone</id>
			<name>Spring Milestone Repository</name>
			<url>http://maven.springframework.org.s3.amazonaws.com/external</url>
		</repository>
		<repository>
			<id>java.net</id>
			<url>http://download.java.net/maven/2</url>
		</repository>

		<!-- Maven Repository -->
		<repository>
			<id>maven.repository</id>
			<name>Another Maven Repository</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>

		<!-- Another Maven Repository -->
		<repository>
			<id>com.mvnrepository</id>
			<name>Maven Repository</name>
			<url>http://mvnrepository.com/artifact/</url>
		</repository>
		<repository>
			<id>nexus</id>
			<name>Nexus Repos</name>
			<url>https://maven.nuxeo.org/nexus/content/repositories/public</url>
		</repository>
		<repository>
			<id>jboss-maven2-release-repository</id>
			<name>JBoss Sonatype OSS</name>
			<url>https://oss.sonatype.org/content/repositories/JBoss</url>
		</repository>
		<repository>
			<id>eaio.com</id>
			<url>http://eaio.com/maven2</url>
		</repository>

		<!-- Sonatype Releases -->
		<repository>
			<id>sonatype-releases</id>
			<name>Sonatype Releases</name>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
		</repository>

		<!-- Glassfish Snapshots -->
		<repository>
			<id>glassfish-maven-repository.dev.java.net</id>
			<name>GlassFish Maven Repository</name>
			<url>http://download.java.net/maven/glassfish</url>
		</repository>

		<!-- Typesafe Repository -->
		<repository>
			<id>typesafe</id>
			<name>Typesafe Repository</name>
			<url>http://repo.typesafe.com/typesafe/releases/</url>
		</repository>

		<!-- Spring Releases -->
		<repository>
			<id>spring-release</id>
			<name>Spring Maven Release Repository</name>
			<url>http://repo.springsource.org/libs-release</url>
		</repository>

		<!-- Tomcat 7 plugin repo -->
		<repository>
			<id>people.apache.snapshots</id>
			<url>http://repository.apache.org/content/groups/snapshots-group/
			</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>apache.snapshots</id>
			<name>Apache Snapshots</name>
			<url>http://repository.apache.org/content/groups/snapshots-group/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
</project>
